# ivy-agent-with-rag-system

./: .gitignore  README.md  main.py  make_documents.ipynb  pyproject.toml  requirements.txt
agents/: ivy_agent.py  retrieval_agent.py
rag/: embedding_manager.py  rag_retriever.py  retrieve_document.py  split_documents.py  vector_store.py
tools/: __init__.py  csv_analyzer.py  lc_tools.py  reminder_tool.py  send_mail_tool.py  summarize_export_tool.py  tool_registry.py  web_search_tool.py
